# S4Project

./: Bank.cpp  Bank.h  CMakeLists.txt  README.md
MPLAB/S4e_Projet.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml
MPLAB/S4e_Projet.X/nbproject/private/: configurations.xml  private.xml
MPLAB/WUB_MpLab.X/: RTC.c  RTC.h  WUB.h  acl_gyro.c  acl_gyro.h  config.h  heure.c  heure.h  lcd.c  main.c  thermistor.c  thermistor.h  timer1.c  uart.c
MPLAB/WUB_MpLab.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
MPLAB/WUB_MpLab.X/nbproject/private/: configurations.xml  private.xml
MPLAB/src/: Afficheur.c  Afficheur.h  RTC.c  RTC.h  User01.c  User01.h  accel.c  acl_gyro.c  acl_gyro.h  btn.c  main.c  main.h  rgbled.c  ssd.c  thermistor.c  thermistor.h
MPLAB/src/system_config/default/: system_init.c  system_interrupt.c
MPLAB/src/system_config/default/framework/system/devcon/src/: sys_devcon.c.dump
Tests/: p32mx370f512l.h  test01.cpp  testRTC.cpp  xc.h
